@@ -38,6 +38,7 @@ fixed bugs:
 - fixed bug in cons_varbound.c not resolving multi-aggregated variables
 - fixed bug when sorting knapsack constraints with the same weights
 - ensure consistency of LP bounds during OBBT diving, i.e., that lower <= upper holds exactly
+- fixed numerical bug in conflict analysis of genvbounds propagator
 
 performance improvements:
 - also copying active tight cuts from the delayed cut pool when calling SCIPcopyCuts()
